<resources>
  <string name="app_name">MOVIES DOCS</string>
  <string name="author_name">decoutkhanqindev</string>
  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome!"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="login">LOGIN</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="login_btn">Login</string>
  <string name="sign_in">SIGN IN</string>
  <string name="sign_up">SIGN UP</string>
  <string name="search_movies">Search Movies</string>
  <string name="movie_title">MOVIE TITLE</string>
  <string name="username">USERNAME</string>
  <string name="now_playing">Now Playing</string>
  <string name="popular">Popular</string>
  <string name="upcoming">Upcoming</string>
  <string name="search_description">Enter a Movie to search</string>
  <string name="search">Search</string>
  <string name="home_icon">Home</string>
  <string name="favorite_icon">Favorite</string>
  <string name="profile_icon">Profile</string>
  <string name="whoops">WHOOPS!</string>
  <string name="noNetworkConnectivityDescription">No internet connection found. \nPlease check your connection or try again later.</string>
  <string name="try_again">TRY AGAIN</string>
  <string name="top_rated">Top Rated</string>
  <string name="vote_average">7.7</string>
  <string name="vote_count">853</string>
  <string name="overview">Eddie and Venom are on the run. Hunted by both of their worlds and with the net closing in, the duo are forced into a devastating decision that will bring the curtains down on Venom and Eddie\'s last dance.</string>
  <string name="release_date">22/10/2024</string>
  <string name="title_a_z">Title A to Z</string>
  <string name="title_z_a">Title Z to A</string>
  <string name="rating_asc">Rating Ascending</string>
  <string name="rating_dsc">Rating Descending</string>
  <string name="sorting_menu">Sorting Menu</string>
  <string name="add_to_favorite">Add to Favorite</string>
  <string name="page_number_1">1</string>
  <string name="genre">Horror</string>
  <string name="genre_title">Genre</string>
  <string name="genre_title1">Genre:</string>
  <string name="count">11939</string>
  <string name="status_released">Status: Released</string>
  <string name="language_english">Language: English</string>
  <string name="runtime">2h 5m</string>
  <string name="status_title">Status: </string>
  <string name="released">Released</string>
  <string name="language_title">Original Language:</string>
  <string name="english">English</string>
  <string name="budget_title">Budget:</string>
  <string name="budget">$2,000,000.00</string>
  <string name="revenue_tilte">Revenue:</string>
  <string name="revenue">$87,261,211.00</string>
  <string name="company_title">Production Companies:</string>
  <string name="company_name">Cineverse</string>
  <string name="country_title">Original Country:</string>
  <string name="us">US</string>
  <string name="movie_detail">Movie Detail</string>
  <string name="company_detail">Company Detail</string>
  <string name="homepage_title">Homepage:</string>
  <string name="homepage_url">www.abc.com</string>
  <string name="company_name_title">Company Name:</string>
  <string name="headquarter_title">Headquarter:</string>
  <string name="headquarter_value">Barcelona, Catalonia</string>
  <string name="description_title">Description:</string>
  <string name="no_description_value">No description</string>
  <string name="parent_company_title">Parent Companies:</string>
  <string name="no_parent_company_value">No parent company</string>
  <string name="movie_list_title">Movies</string>
  <string name="total_movies">(100):</string>
  <string name="popularity_asc">Popularity Ascending</string>
  <string name="popularity_dsc">Popularity Descending</string>
  <string name="popularity">11920.12</string>
  <string name="error_message">Something went wrong.\nCheck the Log for details or try again.</string>
  <string name="cast_title">Casts</string>
  <string name="crew_title">Crews</string>
  <string name="gender">Male</string>
  <string name="character">Eddie Brock / Venom</string>
  <string name="cast_list_title">Cast List</string>
  <string name="crew_list_title">Crew List</string>
  <string name="person_detail">Person Detail</string>
  <string name="birthday_and_deathDay">22/10/1998 - 10/2/2019 (22 years old)</string>
  <string name="known_for_title">Known for:</string>
  <string name="acting">Acting</string>
  <string name="gender_title">Gender:</string>
  <string name="male">Male</string>
  <string name="birthday_title">Birthday:</string>
  <string name="place_of_birth_title">Place of Birth:</string>
  <string name="place_of_birth_value">Vancouver, British Columbia, Canada</string>
  <string name="also_known_as_title">Also Known As:</string>
  <string name="also_known_as_value">Ryan Rodney Reynolds\nChamp Nightengale\nไรอัน เรย์โนลส์\nরায়ান রেনল্ডস্\nGordon Reynolds</string>
  <string name="year_title">2025</string>
  <string name="as_character">as Wade Wilson / Deadpool / Nicepool</string>
  <string name="backdrops_title">Backdrops</string>
  <string name="logos">Logos</string>
  <string name="posters_title">Posters</string>
  <string name="logo_list">Logo List</string>
</resources>