<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/sortingMenu"
      android:icon="@drawable/sorting_icon"
      android:title="@string/sorting_menu"
      app:showAsAction="ifRoom">
    <menu>
      <item
          android:id="@+id/movieTitleAsc"
          android:icon="@drawable/up_icon"
          android:title="@string/title_a_z"
          app:showAsAction="never" />
      <item
          android:id="@+id/movieTitleDsc"
          android:icon="@drawable/down_icon"
          android:title="@string/title_z_a"
          app:showAsAction="never" />
      <item
          android:id="@+id/movieRatingAsc"
          android:icon="@drawable/up_icon"
          android:title="@string/rating_asc"
          app:showAsAction="never" />
      <item
          android:id="@+id/movieRatingDsc"
          android:icon="@drawable/down_icon"
          android:title="@string/rating_dsc"
          app:showAsAction="never" />
      <item
          android:id="@+id/moviepopularityAsc"
          android:icon="@drawable/up_icon"
          android:title="@string/popularity_asc"
          app:showAsAction="never" />
      <item
          android:id="@+id/moviePopularityDsc"
          android:icon="@drawable/down_icon"
          android:title="@string/popularity_dsc"
          app:showAsAction="never" />
    </menu>
  </item>
</menu>