<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

  <TextView
      android:id="@+id/titleSignInText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="264dp"
      android:text="@string/sign_in"
      android:textColor="@color/white"
      android:textSize="32sp"
      android:textStyle="bold"
      app:boxStrokeWidth="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/editEmailLayout"
      android:layout_width="340dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:hint="@string/email"
      android:textColorHint="@color/white"
      app:boxBackgroundColor="@color/dark_blue2"
      app:boxStrokeColor="@color/white"
      app:endIconMode="clear_text"
      app:layout_constraintEnd_toEndOf="@+id/titleSignInText"
      app:layout_constraintStart_toStartOf="@id/titleSignInText"
      app:layout_constraintTop_toBottomOf="@+id/titleSignInText"
      app:startIconDrawable="@drawable/user_icon">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
  </com.google.android.material.textfield.TextInputLayout>

  <!--  <ImageView-->
  <!--      android:id="@+id/userIcon"-->
  <!--      android:layout_width="30dp"-->
  <!--      android:layout_height="30dp"-->
  <!--      android:layout_margin="8dp"-->
  <!--      android:importantForAccessibility="no"-->
  <!--      android:src="@drawable/user_icon"-->
  <!--      app:layout_constraintBottom_toBottomOf="@+id/editEmailLayout"-->
  <!--      app:layout_constraintEnd_toEndOf="@+id/editEmailLayout"-->
  <!--      app:layout_constraintTop_toTopOf="@+id/editEmailLayout"-->
  <!--      tools:ignore="ImageContrastCheck" />-->

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/editPasswordLayout"
      android:layout_width="340dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:hint="@string/password"
      android:textColorHint="@color/white"
      app:boxBackgroundColor="@color/dark_blue2"
      app:boxStrokeColor="@color/white"
      app:endIconMode="password_toggle"
      app:layout_constraintEnd_toEndOf="@+id/editEmailLayout"
      app:layout_constraintStart_toStartOf="@+id/editEmailLayout"
      app:layout_constraintTop_toBottomOf="@+id/editEmailLayout"
      app:startIconDrawable="@drawable/lock_icon">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintBounds" />
  </com.google.android.material.textfield.TextInputLayout>

  <!--  <ImageView-->
  <!--      android:id="@+id/visibilityPasswordBtn"-->
  <!--      android:layout_width="35dp"-->
  <!--      android:layout_height="35dp"-->
  <!--      android:layout_margin="8dp"-->
  <!--      android:importantForAccessibility="no"-->
  <!--      android:src="@drawable/invisible_pwd"-->
  <!--      app:layout_constraintBottom_toBottomOf="@+id/editPasswordLayout"-->
  <!--      app:layout_constraintEnd_toEndOf="@+id/editPasswordLayout"-->
  <!--      app:layout_constraintTop_toTopOf="@+id/editPasswordLayout"-->
  <!--      tools:ignore="ImageContrastCheck" />-->

  <Button
      android:id="@+id/signInBtn"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:backgroundTint="@color/red"
      android:text="@string/sign_in"
      android:textColor="@color/white"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/editPasswordLayout"
      app:layout_constraintStart_toStartOf="@+id/editPasswordLayout"
      app:layout_constraintTop_toBottomOf="@+id/editPasswordLayout"
      tools:ignore="SpUsage,TextSizeCheck,VisualLintBounds,VisualLintButtonSize,VisualLintOverlap" />

  <TextView
      android:id="@+id/signUpText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/sign_up"
      android:textColor="@color/white"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/signInBtn"
      app:layout_constraintHorizontal_bias="0.474"
      app:layout_constraintStart_toStartOf="@+id/signInBtn"
      app:layout_constraintTop_toBottomOf="@+id/signInBtn"
      tools:ignore="RelativeOverlap,TextContrastCheck,VisualLintBounds,VisualLintOverlap" />
</androidx.constraintlayout.widget.ConstraintLayout>